--- a/app/components/ui/Navigation/Navigation.module.scss
+++ b/app/components/ui/Navigation/Navigation.module.scss
@@ -75,9 +75,13 @@
   }
   .primaryRow {
     height: $header-mobile-height;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     padding: $spacing-4_5;
     gap: $spacing-8;
+
+    :nth-child(2) {
+      flex-shrink: 1;
+    }
 
     :nth-child(3) {
       margin-left: auto;
